--- a/style.css
+++ b/style.css
@@ -1,36 +1,38 @@
+@import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css);
+
 body{
-    font-family: monospace;
-    background-image: url(bro.png);
+    font-family:  sans-serif;
     }
     main {
-    background-color: #efefef;
-    color: #330000;
+    background-color: #efefef76;
+    color: #0c0404;
     margin-left: 10px;
     height: 60vh;
+    align-items: center;
     }
     header, footer {
-    background-color: #000d57;
-    color: #fff;
+    background-color: rgb(60, 28, 97);
+    color: #161515;
     padding: 1rem;
     height: 50px;
     }
     header, nav{
-    margin-bottom: 10px;
-    flex-basis: 50%;
+    margin-bottom: 20px;
+    flex-basis: 50px;
     }
     footer{
-    margin-top: 10px;
+    margin-top: px;
     }
     nav {
-    background-color: #fff;
+    background-color: #899392;
     color: #000;
     padding: 1rem;
     height: 20px;
     }
     .sidebar1, .sidebar2 {
     flex-basis: 10%;
-    background-color: #fff;
-    color: #000;
+    background-color: #f9f6f6;
+    color: #120d0d;
     }
     .sidebar2{
     margin-left: 10px;
